apps/base/lcshare/lcshare-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lcshare-ingressroute
  namespace: lcshare
  annotations:
    gethomepage.dev/href: "https://lcshare.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Local Content Share"
    gethomepage.dev/description: "Quick file sharing"
    gethomepage.dev/group: "Tools"
spec:
  entryPoints: [websecure, web]
  routes:
    - match: Host(`lcshare.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: lcshare
          port: 8080
          scheme: http
  tls: {}
